--- a/sys-kernel/sparc-sources/ChangeLog
+++ b/sys-kernel/sparc-sources/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/sparc-sources
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/sparc-sources/ChangeLog,v 1.93 2006/01/08 11:39:36 joker Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/sparc-sources/ChangeLog,v 1.94 2006/02/02 19:56:09 gustavoz Exp $
+
+*sparc-sources-2.4.32-r2 (02 Feb 2006)
+
+  02 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  -files/2.4-sparc64-ramdisk64.patch, -files/blade1500.patch,
+  -sparc-sources-2.4.30.ebuild, +sparc-sources-2.4.32-r2.ebuild:
+  Bump with CVE-2004-1058 backport fix and cleanup
 
   08 Jan 2006; Christian Birchinger <joker@gentoo.org>
   sparc-sources-2.4.32-r1.ebuild:
