--- a/www-apps/horde/ChangeLog
+++ b/www-apps/horde/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/horde
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde/ChangeLog,v 1.68 2008/07/06 19:19:43 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde/ChangeLog,v 1.69 2008/08/01 04:47:55 wrobel Exp $
+
+  01 Aug 2008; wrobel@gentoo.org -horde-3.1.7.ebuild:
+  Removed vulnerable version wrt sec issue #228507.
 
   06 Jul 2008; Markus Meier <maekke@gentoo.org> horde-3.1.8.ebuild:
   amd64 stable, bug #228507
