--- a/www-apps/horde-kronolith/ChangeLog
+++ b/www-apps/horde-kronolith/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/horde-kronolith
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.50 2008/08/01 05:17:31 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-kronolith/ChangeLog,v 1.51 2008/08/01 16:16:00 wrobel Exp $
+
+  01 Aug 2008; wrobel@gentoo.org Manifest:
+  Removed vulnerable horde-kronolith-2.1.7 wrt sec issue #219304.
 
   01 Aug 2008; wrobel@gentoo.org -horde-kronolith-2.1.7.ebuild:
   Removed vulnerable horde-kronolith-2.1.7 wrt sec issue #219304.
