--- a/app-text/acroread/ChangeLog
+++ b/app-text/acroread/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.115 2008/04/27 13:56:39 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.116 2008/08/01 18:06:47 tgurr Exp $
+
+*acroread-8.1.2-r3 (01 Aug 2008)
+
+  01 Aug 2008; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.2.ebuild,
+  -acroread-8.1.2-r1.ebuild, +acroread-8.1.2-r3.ebuild:
+  Bump for Adobe Reader 8.1.2 Security Update 1, fixing security issue
+  CVE-2008-2641 bug #233383. Remove older versions.
 
   27 Apr 2008; Markus Meier <maekke@gentoo.org> acroread-8.1.2-r2.ebuild:
   amd64/x86 stable, bug #219207
