Latest, thanks to Nicolas Schlumberger, closing bug #233751 Package-Manager: portage-2.2_rc6/cvs/Linux 2.6.26-gentoo x86_64

--- a/sci-biology/foldingathome/ChangeLog
+++ b/sci-biology/foldingathome/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-biology/foldingathome
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/foldingathome/ChangeLog,v 1.21 2008/06/15 04:36:41 je_fro Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/foldingathome/ChangeLog,v 1.22 2008/08/03 03:19:58 je_fro Exp $
+
+*foldingathome-6.02 (03 Aug 2008)
+
+  03 Aug 2008; Jeff Gardner <je_fro@gentoo.org> +files/6.02/fah-init,
+  +files/6.02/folding-conf.d, +files/6.02/initfolding,
+  +foldingathome-6.02.ebuild:
+  Latest version, thanks to Nicolas Schlumberger, closes bug #233751
 
   15 Jun 2008; Jeff Gardner <je_fro@gentoo.org>
   files/6.02_beta1/folding-conf.d:
